add living review arXiv ref

--- a/QPPQ.tex
+++ b/QPPQ.tex
@@ -76,7 +76,7 @@
 
 	% With the goal of fostering and promoting the dialogue across these two areas and to promote the interdisciplinary interaction between the researchers working in these fields, the Group of Lasers and Plasmas at IPFN, and the Physics of Information and Quantum Technologies Group at PQI and IT will host a series of monthly discussion sessions on Quantum for Plasmas $\&$ Plasmas for Quantum.
 
-	Quantum Computing promises accelerated simulation of certain classes of problems, in particular in plasma physics. The goal of this document is to provide a comprehensive list of citations for those developing and applying these approaches to experimental or theoretical analyses.  As a living document, it will be updated as often as possible to incorporate the latest developments.  Suggestions are most welcome.
+	Quantum Computing promises accelerated simulation of certain classes of problems, in particular in plasma physics. The goal of this document is to provide a comprehensive list of citations for those developing and applying these approaches to experimental or theoretical analyses.  As a living document, it will be updated as often as possible to incorporate the latest developments. Suggestions are most welcome.
 
 \end{abstract}
 
@@ -113,6 +113,7 @@ In order to be as useful as possible, this document will continue to evolve so p
 %&\footnote{See \href{http://epp.ist.utl.pt/qppq/}{http://epp.ist.utl.pt/qppq/}.}
 before you write your next paper. You can simply download the .bib file to get all of the latest references. Please consider citing Ref.~\cite{qppqlivingreview} when referring to this living review.
 
+\newpage
 \begin{itemize} 
 
 	\item \textbf{Modern Reviews}
@@ -152,7 +153,8 @@ before you write your next paper. You can simply download the .bib file to get a
 
                         \item \textbf{Laguerre} \Qtag[blue]{QAnn} \Ttag[blue]{Num}~\cite{criadoQadeSolvingDifferential2022}.
 
-                        \textit{The Laguerre equation is of the form $$x\dv[2]{y}{x}+(1-x)\dv{y}{x} + ny=0.$$}
+                        \textit{The Laguerre equation is of the form $$ x \dfrac{\mathrm{d}^2 y}{\mathrm{d} x^2} + (1-x) \dfrac{\mathrm{d} y}{\mathrm{d} x} + n ~y = 0$$
+                        }
                     \end{itemize}
 				\end{itemize}
 			\item \textbf{Nonlinear} ~\Qtag[green]{NISQ} ~\cite{kyriienkoSolvingNonlinearDifferential2021, shiSimulatingNonnativeCubic2021} ~\Qtag[red]{FTol} \Ttag{Theo}~\cite{leytonQuantumAlgorithmSolve2008,dodinQuantumComputationNonlinear2021,lloydQuantumAlgorithmNonlinear2020} \Ttag[blue]{Num}~\cite{jinQuantumSimulationPartial2022a,liuEfficientQuantumAlgorithm2021,suranaCarlemanLinearizationBased2022b}, ~\Qtag[blue]{QAnn} \Ttag[blue]{Num}~\cite{zangerQuantumAlgorithmsSolving2021}.
@@ -289,8 +291,7 @@ before you write your next paper. You can simply download the .bib file to get a
                 
                 \textit{The Navier-Stokes equations describe the motion of viscous fluids. They describe conservation of mass and momentum and often require equations of state for pressure, temperature and density to close the system of equations.}
 
-                $$ \partial_t \rho (x,t) + \nabla \cdot (\rho u) = 0, \frac{\partial}{\partial t}(\rho \mathbf{u})+\nabla \cdot(\rho \mathbf{u} \otimes \mathbf{u})=-\nabla p+\mu \nabla^2 \mathbf{u}+\frac{1}{3} \mu \nabla(\nabla \cdot \mathbf{u})+\rho \mathbf{g}
-                $$
+                $$ \partial_t \rho (x,t) + \nabla \cdot (\rho u) = 0, \frac{\partial}{\partial t}(\rho \mathbf{u})+\nabla \cdot(\rho \mathbf{u} \otimes \mathbf{u})=-\nabla p+\mu \nabla^2 \mathbf{u}+\frac{1}{3} \mu \nabla(\nabla \cdot \mathbf{u})+\rho \mathbf{g}$$
                 
                 \begin{itemize} 
                     \item \textbf{Incompressible} \Qtag[green]{NISQ}~\cite{leongVariationalQuantumEvolution2022}, \Qtag[gray]{QIns} \Ttag[blue]{Num}~\cite{lapworthHybridQuantumClassicalCFD2022}.
